--- a/RequestTest3/RequestTest3/MyTableViewCell.xib
+++ b/RequestTest3/RequestTest3/MyTableViewCell.xib
@@ -16,18 +16,30 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="270"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w7d-uw-30Y">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w7d-uw-30Y">
                         <rect key="frame" x="16" y="8" width="288" height="151"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="151" id="Hrk-h9-mVT"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfB-Td-4GS">
-                        <rect key="frame" x="16" y="175" width="288" height="45"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfB-Td-4GS">
+                        <rect key="frame" x="24" y="175" width="288" height="45"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="45" id="mJn-Fw-iHm"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="italicSystem" pointSize="28"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="nfB-Td-4GS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="06I-ID-Tnm"/>
+                    <constraint firstAttribute="trailing" secondItem="w7d-uw-30Y" secondAttribute="trailing" constant="16" id="M5P-Ku-3nn"/>
+                    <constraint firstItem="w7d-uw-30Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="XVp-Mt-Cvv"/>
+                    <constraint firstItem="nfB-Td-4GS" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="8" id="h9A-9H-3lJ"/>
+                    <constraint firstItem="w7d-uw-30Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="q7R-Gx-d9z"/>
+                    <constraint firstItem="nfB-Td-4GS" firstAttribute="top" secondItem="w7d-uw-30Y" secondAttribute="bottom" constant="16" id="vcb-CS-LKr"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
